--- a/SolarWirkungsgrad.bib
+++ b/SolarWirkungsgrad.bib
@@ -37,3 +37,10 @@
 	langid = {german},
 	note = {andreas.hohenau@uni-graz.at},
 }
+
+@online{noauthor_407a_nodate,
+	title = {407A - Newport Optical Power Meters - {BRL} Test},
+	url = {https://www.brltest.com/index.php?main_page=product_info&products_id=4317},
+	urldate = {2023-03-21},
+	file = {407A - Newport Optical Power Meters - BRL Test:/home/bob/Zotero/storage/CDFURR7B/index.html:text/html},
+}
