--- a/wirkungsgrad.tex
+++ b/wirkungsgrad.tex
@@ -1009,7 +1009,9 @@ werden.
 
 \section{Zusammenfassung}\label{sec:zusammenfassung}
 
-Hier werden nochmals alle Ergebnisse dieser Experimentenfolge aufgelistet:
+Hier werden nochmals alle Ergebnisse dieser Experimentenfolge aufgelistet.
+Wobei die meisten zu erstellenden Diagramme Aufgrund der Länge der
+\autoref{sec:auswertung} entnommen werden sollen.
 
 \subsection{Wärmepumpe}
 \begin{figure}[H]
@@ -1025,13 +1027,72 @@ Hier werden nochmals alle Ergebnisse dieser Experimentenfolge aufgelistet:
 
 \subsection{Kennlinien und Kenndaten von Solarzellen bei Bestrahlung}
 
+\begin{enumerate}
+	\item $P_\text{MPP} = \SI{686(9)}{\milli\watt}$
+	\item $U_\text{MPP} = \SI{10.120(18)}{\volt}$
+	\item $I_\text{MPP} = \SI{67.8(7)}{\milli\ampere}$
+	\item $U_L = \SI{12.03(3)}{\volt}$
+	\item $I_k = \SI{76.6(8)}{\milli\ampere}$
+	\item $FF = \SI{0.744(12)}{1}$
+\end{enumerate}
+
 \subsubsection{Serienschaltung der beiden Solarzellen}
+\begin{enumerate}
+	\item $P_\text{MPP} = \SI{891(11)}{\milli\watt}$
+	\item $U_\text{MPP} = \SI{4.550(9)}{\volt}$
+	\item $I_\text{MPP} = \SI{196(2)}{\milli\ampere}$
+	\item $U_L = \SI{5.760(11)}{\volt}$
+	\item $I_k = \SI{211(3)}{\milli\ampere}$
+	\item $FF = \SI{0.734(12)}{1}$
+\end{enumerate}
 
 \subsubsection{Parallelschaltung der beiden Solarzellen}
+\begin{enumerate}
+	\item $P_\text{MPP} = \SI{43.7(6)}{\milli\watt}$
+	\item $U_\text{MPP} = \SI{6.540(12)}{\volt}$
+	\item $I_\text{MPP} = \SI{6.68(7)}{\milli\ampere}$
+	\item $U_L = \SI{11.45(2)}{\volt}$
+	\item $I_k = \SI{7.65(8)}{\milli\ampere}$
+	\item $FF = \SI{0.499(9)}{1}$
+\end{enumerate}
 
 \subsubsection{Serienschaltung der beiden Solarzellen, wobei eine Solarzelle partiell abgeschattet wird}
 
 \subsection{Diodenparameter und Wirkungsgrad einer Solarzelle}
+
+Dunkelkennlinie:
+
+\begin{enumerate}
+	\item $f_1 = \SI{1.868(15)}{1}$
+\end{enumerate}
+
+Hellkennlinie Halogen Lampe $@\SI{250(30)}{\watt\per\meter\squared}$:
+
+\begin{enumerate}
+	\item $P_\text{MPP} = \SI{10.125(19)}{\milli\watt}$
+	\item $U_\text{MPP} = \SI{0.4560(4)}{\volt}$
+	\item $I_\text{MPP} = \SI{22.20(3)}{\milli\ampere}$
+	\item $\eta = \SI{0.062(9)}{1}$
+	\item $f_1 = \SI{1.668(5)}{1}$
+\end{enumerate}
+
+Hellkennlinie Halogen Lampe $@\SI{420(60)}{\watt\per\meter\squared}$:
+\begin{enumerate}
+	\item $P_\text{MPP} = \SI{38.90(5)}{\milli\watt}$
+	\item $U_\text{MPP} = \SI{0.4680(4)}{\volt}$
+	\item $I_\text{MPP} = \SI{83.12(4)}{\milli\ampere}$
+	\item $\eta = \SI{0.14(2)}{1}$
+	\item $f_1 = \SI{2.058(8)}{1}$
+\end{enumerate}
+
+Hellkennlinie bläuliche Led $@\SI{1040(120)}{\watt\per\meter\squared}$:
+\begin{enumerate}
+	\item $P_\text{MPP} = \SI{14.85(3)}{\milli\watt}$
+	\item $U_\text{MPP} = \SI{0.4620(4)}{\volt}$
+	\item $I_\text{MPP} = \SI{32.15(3)}{\milli\ampere}$
+	\item $\eta = \SI{0.022(3)}{1}$
+	\item $f_1 = \SI{1.773(7)}{1}$
+\end{enumerate}
 
 \newpage
 \printbibliography
