--- a/wirkungsgrad.tex
+++ b/wirkungsgrad.tex
@@ -966,6 +966,8 @@ werden.
 	}\label{fig:eis}
 \end{figure}
 
+Abgesehen von den Spikes folgt die erhaltene Kurve dem erwarteten Verlauf.
+
 \subsection{Kennlinien und Kenndaten von Solarzellen bei Bestrahlung}
 
 Bei einer erneuten Durchführung wäre es wichtig, die Lampe einige Zeit auf die
@@ -976,6 +978,10 @@ Die Solarzelle waren zur Lichtquelle verdreht, deshalb ist die effektive Fläche
 mit dem Cosinus zur ganzen Fläche verbunden ($A' = A \cos(\theta)$). Der
 dadurch entstandene prozentuelle Fehler beträgt somit
 $100(1-\frac{A'}{A})=\SI{0.38}{\percent}$.
+
+Die erhaltenen Kenndaten werden, der besseren Übersicht halber, in 
+\autoref{sec:zusammenfassung} nochmals aufgelistet. Insgesamt wirken
+diese Parameter plausibel.
 
 \subsubsection{Serienschaltung der beiden Solarzellen}
 
@@ -1000,7 +1006,8 @@ da die beschattete Fläche ein parasitärer Widerstand ist.
 \subsection{Diodenparameter und Wirkungsgrad einer Solarzelle}
 
 Bei der Dunkelkennlinie entsprechen die meisten Parameter(e.g.\ wie $I_{ph}$)
-null was auch mit der Erwartung übereinstimmt.
+null was auch mit der Erwartung übereinstimmt. Die Hellkennlinien
+folgen allgemein dem erwarteten Verlauf.
 
 Da die Bestrahlungsstärke mit dem Abstand zum Quadrat absinkt, ist der
 gemessene Punkt nur ein Informations Punkt und nicht representative für die
@@ -1015,10 +1022,12 @@ aufgenommen. Deshalb wird trotz der hohen Bestrahlungsstärke kaum etwas
 konvertiert, da Solarzellen für das Sonnenabstrahlungsspektrum optimiert
 werden.
 
+\newpage
+
 \section{Zusammenfassung}\label{sec:zusammenfassung}
 
 Hier werden nochmals alle Ergebnisse dieser Experimentenfolge aufgelistet.
-Wobei die meisten zu erstellenden Diagramme Aufgrund der Länge der
+Wobei die meisten zu erstellenden Diagramme Aufgrund der Länge
 \autoref{sec:auswertung} entnommen werden sollen.
 
 \subsection{Wärmepumpe}
