--- a/wirkungsgrad.tex
+++ b/wirkungsgrad.tex
@@ -774,7 +774,7 @@ verwendet\cite{hohenau_warmepumpe_2014}.
 	\caption[Log P-H Diagramm des Kreisprozesses der Wärmepumpe]{ $\log{p}-H$ Diagramm des
 		linkslaufenden Kreisprozesses der Wärmepumpe. Dabei wurden die Equilibrium
 		Temperaturen und Drücke für die Warme und kalte Seite eingezeichnet. Wobei
-		$p_k$ der Druck und $T_k$ die Temperatur der kalten Seite der Wärmepumpe sind.
+		$p_k$ der Druck und $T_k$ die Temperatur der kalten Seite der Wärmepumpe sind;
 		$p_w$ und $T_w$ sind dementsprechend, die der warmen Seite der Wärmepumpe.
 	}\label{fig:logPHDiagramm}
 \end{figure}
